@@ -3,6 +3,8 @@ ubuntu-dev-tools (0.197) UNRELEASED; urgency=medium
   [ Simon Quigley ]
   * Update the manpage for syncpackage to reflect the ability to sync
     multiple packages at once.
+  * When using pull-*-source to grab a package which already has a defined
+    Vcs- field, display the exact same warning message `apt source` does.
 
  -- Ubuntu Tooling Warriors <ubuntu-devel@lists.ubuntu.com>  Thu, 10 Aug 2023 14:37:54 -0500
 
